--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -2,7 +2,9 @@
   @media screen and (min-width: 480px) {
     width: 480px;
   }
+  @media screen and(min-width:768px) {
+    width: 768px;
+  }
   margin: 0 auto;
   padding: 0 15px;
-  width: 480px;
 }
