--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -3,7 +3,8 @@
   padding: 60px 0;
 }
 .footer-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @media screen and(min-width:768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
