--- a/sass/components/footer/_info.scss
+++ b/sass/components/footer/_info.scss
@@ -1,5 +1,8 @@
 .footer__info {
-  margin: 0 0 60px;
+  margin: 0 auto 60px;
+  @media screen and(min-width:768px) {
+    margin: 0 165px 0 61px;
+  }
 }
 .footer__info-addres {
   margin: 0 0 8px;
