--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -1,5 +1,12 @@
 .subscribe {
   width: 100%;
+  @media screen and (max-width: 480px) {
+    width: 450px;
+  }
+  @media screen and (min-width: 768px) {
+    margin: 60px 0 0 151px;
+    width: 450px;
+  }
 }
 .subscribe-text {
   margin: 0 0 20px;
