--- a/sass/components/main-index/_feature.scss
+++ b/sass/components/main-index/_feature.scss
@@ -1,17 +1,32 @@
 .feature-list {
   @include list(margin);
   margin: 0;
+  @media screen and(min-width:768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 .feature {
   padding: 60px 0;
 }
 .feature-item {
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    margin: 15px;
+  }
   margin: 0 0 30px;
   &:last-child {
     margin: 0;
+    @media screen and(min-width:768px) {
+      margin: 15px;
+    }
   }
 }
 .feature-container {
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,6 +42,9 @@
   background-position: center;
 }
 .feature-title {
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
   margin: 30px 0 10px;
   text-align: center;
   color: $title-text-color;
