--- a/css/main.css
+++ b/css/main.css
@@ -300,6 +300,10 @@ body {
   letter-spacing: 0.03em;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -325,6 +329,12 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .logo {
   color: #212121;
   font-family: Raleway, sans-serif;
@@ -338,6 +348,13 @@ body {
   .logo {
     display: block;
     padding: 16px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
   }
 }
 
@@ -370,7 +387,7 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: 7;
+  z-index: 2;
   margin-left: auto;
   padding: 0;
   color: currentColor;
@@ -412,7 +429,7 @@ header {
 .header-menu {
   display: none;
   position: absolute;
-  z-index: 2;
+  z-index: 1;
   padding: 48px 40px;
   top: 0;
   left: 0;
@@ -544,6 +561,12 @@ header {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .navigation {
+    margin: 0 0 0 93px;
+  }
+}
+
 .navigation__item {
   position: relative;
   margin: 0 50px 0 0;
@@ -591,10 +614,6 @@ header {
 
 .contacts-container {
   display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   margin-left: auto;
 }
 
@@ -606,12 +625,24 @@ header {
   }
 }
 
+@media screen and (max-width: 1199.97px) {
+  .contacts-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .contacts {
   color: #757575;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.02em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   -webkit-transition-property: color;
   transition-property: color;
@@ -621,12 +652,23 @@ header {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 1200px) {
+  .contacts {
+    font-size: 14px;
+  }
+  .contacts + .contacts {
+    margin-left: 30px;
+  }
+}
+
 .contacts:hover, .contacts:focus {
   color: #2196f3;
 }
 
-.contacts + .contacts {
-  margin-top: 10px;
+@media screen and (max-width: 1199.97px) {
+  .contacts + .contacts {
+    margin-top: 10px;
+  }
 }
 
 .icon-mail {
@@ -694,11 +736,24 @@ header {
   padding: 60px 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .feature {
+    padding: 94px 0;
+  }
+}
+
 .feature-item {
   margin: 0 0 30px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
+  .feature-item {
+    width: 270px;
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.97px) {
   .feature-item {
     width: 354px;
     margin: 15px;
@@ -732,9 +787,15 @@ header {
   border-radius: 4px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.97px) {
   .feature-container {
     width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature-container {
+    width: 270px;
   }
 }
 
@@ -775,8 +836,13 @@ header {
 }
 
 .example {
-  display: none;
   padding-bottom: 94px;
+}
+
+@media screen and (max-width: 1199.97px) {
+  .example {
+    display: none;
+  }
 }
 
 .example-title {
@@ -855,6 +921,12 @@ header {
   padding: 60px 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .teams {
+    padding: 94px 0;
+  }
+}
+
 .teams-title {
   margin: 0 0 30px;
   color: #212121;
@@ -885,6 +957,12 @@ header {
   .employee-card {
     width: 354px;
     margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .employee-card {
+    width: 270px;
   }
 }
 
@@ -973,6 +1051,12 @@ header {
   padding: 60px 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .customer {
+    padding: 94px 0;
+  }
+}
+
 .customer-title {
   margin: 0 0 50px;
   color: #212121;
@@ -1022,9 +1106,15 @@ header {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.97px) {
   .customer-link {
     width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customer-link {
+    width: 170px;
   }
 }
 
@@ -1042,6 +1132,14 @@ header {
   padding: 60px 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .footer-container {
     display: -webkit-box;
@@ -1056,7 +1154,13 @@ header {
   margin: 0 auto 60px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
+  .footer__info {
+    margin: 0 70px 0 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.97px) {
   .footer__info {
     margin: 0 165px 0 61px;
   }
@@ -1085,7 +1189,13 @@ header {
   margin: 0 auto 60px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
+  .join {
+    margin: 0 93px 0 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.97px) {
   .join {
     margin: 0;
   }
@@ -1098,6 +1208,12 @@ header {
   line-height: 1.14;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .join > p {
+    text-align: left;
+  }
 }
 
 .join-list {
@@ -1162,6 +1278,14 @@ header {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    display: block;
+    width: 570px;
+    margin: 0;
+  }
+}
+
 .subscribe-text {
   margin: 0 0 20px;
   text-align: center;
@@ -1169,6 +1293,20 @@ header {
   line-height: 1.14;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-text {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .subscribe-email {
@@ -1184,17 +1322,32 @@ header {
   color: #ffffff;
 }
 
+@media screen and (min-width: 1200px) {
+  .subscribe-email {
+    width: 358px;
+  }
+}
+
 .subscribe-button {
   display: block;
   margin: 0 auto;
 }
 
+@media screen and (min-width: 1200px) {
+  .subscribe-button {
+    margin: 0 0 0 12px;
+  }
+}
+
 .backdrop {
   position: fixed;
+  overflow-y: scroll;
+  z-index: 3;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
+  padding: 93px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   -webkit-transition-property: opacity;
   transition-property: opacity;
@@ -1210,17 +1363,29 @@ header {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  position: relative;
+  padding: 40px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -1229,11 +1394,11 @@ header {
 }
 
 .form-title {
-  margin: 40px 0 12px;
+  margin: 0 0 12px;
   padding: 0;
   font-weight: bold;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
@@ -1253,7 +1418,7 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 41px 10px;
+  margin: 0 0 10px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -1268,7 +1433,6 @@ header {
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  width: 448px;
   height: 40px;
   -webkit-transition-property: border;
   transition-property: border;
@@ -1276,6 +1440,18 @@ header {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .form-imput {
+    width: 370px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-imput {
+    width: 448px;
+  }
 }
 
 .form-imput:focus {
@@ -1309,7 +1485,6 @@ textarea {
 }
 
 .form-textarea {
-  width: 448px;
   height: 120px;
   padding: 12px 16px;
   margin: 4px 0 0;
@@ -1323,6 +1498,18 @@ textarea {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 480px) {
+  .form-textarea {
+    width: 370px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-textarea {
+    width: 448px;
+  }
+}
+
 .form-textarea:focus {
   outline: none;
   border-color: #2196f3;
@@ -1330,15 +1517,29 @@ textarea {
 }
 
 .checkbox-label {
-  display: inline-block;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   margin: 10px 0 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+  line-height: 1.17;
+}
+
+@media screen and (min-width: 1200px) {
+  .checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .checkbox-label::before {
-  content: '';
+  content: "";
   background-image: url("../image/checkbox.svg ");
-  background-size: contain;
-  margin-left: 52px;
+  background-size: cover;
+  margin-right: 8px;
   width: 16px;
   height: 15px;
   display: inline-block;
@@ -1370,7 +1571,8 @@ textarea {
 }
 
 .form-submit {
-  margin: 30px 164px 0;
+  display: block;
+  margin: 31px auto 0;
 }
 
 .close {
@@ -1406,21 +1608,35 @@ textarea {
   padding: 60px 0;
 }
 
+@media screen and (min-width: 1200px) {
+  .project {
+    padding: 94px 0;
+  }
+}
+
 .buttom-list__item {
   margin-right: 8px;
-  margin-bottom: 15px;
 }
 
-.buttom-list__item:nth-child(3) {
-  margin-right: 0;
+@media screen and (max-width: 767px) {
+  .buttom-list__item {
+    margin-bottom: 15px;
+  }
+  .buttom-list__item:nth-child(3) {
+    margin-right: 0;
+  }
+  .buttom-list__item:nth-child(4) {
+    margin-bottom: 0;
+  }
+  .buttom-list__item:last-child {
+    margin: 0;
+  }
 }
 
-.buttom-list__item:nth-child(4) {
-  margin-bottom: 0;
-}
-
-.buttom-list__item:last-child {
-  margin: 0;
+@media screen and (min-width: 768px) {
+  .buttom-list__item:last-child {
+    margin-right: 0;
+  }
 }
 
 .filter-buttom {
@@ -1469,6 +1685,21 @@ textarea {
   margin: 0 0 40px;
 }
 
+@media screen and (min-width: 768px) {
+  .buttom-list {
+    margin: 0 0 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .buttom-list {
+    margin: 0 0 50px;
+  }
+}
+
 .project__card {
   padding: 0;
   margin: margin;
@@ -1478,14 +1709,37 @@ textarea {
   margin: 0;
 }
 
-.project__card--item:not(:last-child) {
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .project__card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project__card--item {
+    margin: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .project__card--item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .project__card--link {
   display: block;
   outline: none;
   text-decoration: none;
+  height: 100%;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
   transition-property: box-shadow;
@@ -1494,6 +1748,30 @@ textarea {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .project__card--link {
+    width: 450px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .project__card--link {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project__card--link {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__card--link {
+    width: 370px;
+  }
 }
 
 .project__card--link:hover, .project__card--link:focus {
@@ -1505,6 +1783,17 @@ textarea {
 .project__description {
   position: relative;
   overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
+  .project__description {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .project__card--photo {
@@ -1546,9 +1835,12 @@ textarea {
 
 .project-signature {
   padding: 20px 24px;
-  border-left: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
+}
+
+@media screen and (min-width: 768px) {
+  .project-signature {
+    width: 100%;
+  }
 }
 
 .project-title {
