--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,6 +5,9 @@
   @media screen and(min-width:768px) {
     width: 768px;
   }
+  @media screen and(min-width:1200px) {
+    width: 1200px;
+  }
   margin: 0 auto;
   padding: 0 15px;
 }
