--- a/sass/components/footer/_join.scss
+++ b/sass/components/footer/_join.scss
@@ -1,10 +1,16 @@
 .join {
   margin: 0 auto 60px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
+    margin: 0 93px 0 0;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199.97px) {
     margin: 0;
   }
 }
 .join > p {
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
   margin: 0 0 20px;
   text-align: center;
   font-weight: 700;
