--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -7,8 +7,16 @@
     margin: 60px 0 0 151px;
     width: 450px;
   }
+  @media screen and(min-width:1200px) {
+    display: block;
+    width: 570px;
+    margin: 0;
+  }
 }
 .subscribe-text {
+  @media screen and (min-width: 1200px) {
+    text-align: left;
+  }
   margin: 0 0 20px;
   text-align: center;
   font-weight: 700;
@@ -16,7 +24,15 @@
   text-transform: uppercase;
   color: $primery-white-color;
 }
+.subscribe-form {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
 .subscribe-email {
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+  }
   width: 100%;
   height: 50px;
   margin: 0 auto 20px;
@@ -31,4 +47,7 @@
   @extend %button;
   display: block;
   margin: 0 auto;
+  @media screen and (min-width: 1200px) {
+    margin: 0 0 0 12px;
+  }
 }
