--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -6,6 +6,9 @@
   @media screen and(min-width:768px) {
     display: flex;
   }
+  @media screen and(min-width:1200px) {
+    margin: 0 0 0 93px;
+  }
   display: none;
   @include list(margin);
   margin: 0 0 0 88px;
