--- a/sass/components/main-index/_employee-card.scss
+++ b/sass/components/main-index/_employee-card.scss
@@ -6,6 +6,9 @@
     width: 354px;
     margin: 15px;
   }
+  @media screen and(min-width:1200px) {
+    width: 270px;
+  }
   margin: 0 0 30px;
   background-color: $primery-white-color;
   font-size: 16px;
