--- a/sass/components/main-index/_feature.scss
+++ b/sass/components/main-index/_feature.scss
@@ -8,10 +8,17 @@
   }
 }
 .feature {
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
   padding: 60px 0;
 }
 .feature-item {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+    margin: 15px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199.97px) {
     width: 354px;
     margin: 15px;
   }
@@ -24,8 +31,11 @@
   }
 }
 .feature-container {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199.97px) {
     width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 270px;
   }
   display: flex;
   justify-content: center;
