--- a/sass/components/modal/_form.scss
+++ b/sass/components/modal/_form.scss
@@ -1,118 +1,137 @@
 .form-title {
-    margin: 40px 0 12px;
-    padding: 0;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $title-text-color;
-  }
-  .form-field {
-    display: flex;
-  }
-  .form-label {
-    display: flex;
-    flex-direction: column;
-    margin: 0 41px 10px;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-  }
-  .form-container {
-    position: relative;
-    margin: 4px 0 0;
-  }
-  .form-imput {
-    padding-left: 42px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    width: 448px;
-    height: 40px;
-    @include transition(border);
-    &:focus {
-        outline: none;
-        border-color: $accent-color;
-        cursor: pointer;
-    }
-  }
-  .form-icon {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 12px;
-    width: 18px;
-    height: 18px;
-    @include transition(fill);
-    .form-imput:focus + & {
-        fill: $accent-color;
-    }
-  }
-  textarea {
-    resize: none;
-  }
-  .form-textarea {
-    width: 448px;
-    height: 120px;
-    padding: 12px 16px;
-    margin: 4px 0 0;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    @include transition(border);
-    &:focus {
-        outline: none;
-        border-color: $accent-color;
-        cursor: pointer;
-    }
-  }
-  .checkbox-label {
-    display: inline-block;
-    margin: 10px 0 0;
-  }
-  .checkbox-label::before {
-    content: '';
-    background-image: url("../image/checkbox.svg ");
-    background-size: contain;
-    margin-left: 52px;
-    width: 16px;
-    height: 15px;
-    display: inline-block;
-    @include transition(background-color background-image);
-    .old-checkbox:checked ~ & {
-        background-color: $accent-color;
-        background-image: url("../image/okey.svg");
-        background-size: contain;
-        background-origin: border-box;
-        background-repeat: no-repeat;
-        border-color: $accent-color;
-        @include transition(background-color background-image);
-    }
-  }
-  .condition {
-    color: $accent-color;
-  }
-
-  .form-submit {
-    @extend %button;
-  margin: 30px 164px 0;
+  margin: 0 0 12px;
+  padding: 0;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: $title-text-color;
 }
-  .close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    background-color: none;
-    border-radius: 50%;
+.form-field {
+  display: flex;
+}
+.form-label {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 10px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+}
+.form-container {
+  position: relative;
+  margin: 4px 0 0;
+}
+.form-imput {
+  @media screen and(min-width:480px) {
+    width: 370px;
+  }
+  @media screen and(min-width:1200px) {
+    width: 448px;
+  }
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  height: 40px;
+  @include transition(border);
+  &:focus {
+    outline: none;
+    border-color: $accent-color;
     cursor: pointer;
-    background: $primery-white-color;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    @include transition(fill);
-    &:focus, &:hover {
-        fill: $accent-color;
-    }
   }
-  .close-icon {
-    width: 11px;
-    height: 11px;
+}
+.form-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 12px;
+  width: 18px;
+  height: 18px;
+  @include transition(fill);
+  .form-imput:focus + & {
+    fill: $accent-color;
   }
+}
+textarea {
+  resize: none;
+}
+.form-textarea {
+  @media screen and(min-width:480px) {
+    width: 370px;
+  }
+  @media screen and(min-width:1200px) {
+    width: 448px;
+  }
+  height: 120px;
+  padding: 12px 16px;
+  margin: 4px 0 0;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  @include transition(border);
+  &:focus {
+    outline: none;
+    border-color: $accent-color;
+    cursor: pointer;
+  }
+}
+.checkbox-label {
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+  display: inline-flex;
+  margin: 10px 0 0;
+  align-items: center;
+  font-size: 12px;
+  line-height: 1.17;
+}
+.checkbox-label::before {
+  content: "";
+  background-image: url("../image/checkbox.svg ");
+  background-size: cover;
+  margin-right: 8px;
+  width: 16px;
+  height: 15px;
+  display: inline-block;
+  @include transition(background-color background-image);
+  .old-checkbox:checked ~ & {
+    background-color: $accent-color;
+    background-image: url("../image/okey.svg");
+    background-size: contain;
+    background-origin: border-box;
+    background-repeat: no-repeat;
+    border-color: $accent-color;
+    @include transition(background-color background-image);
+  }
+}
+.condition {
+  color: $accent-color;
+}
+
+.form-submit {
+  @extend %button;
+  display: block;
+  margin: 31px auto 0;
+}
+.close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: none;
+  border-radius: 50%;
+  cursor: pointer;
+  background: $primery-white-color;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  @include transition(fill);
+  &:focus,
+  &:hover {
+    fill: $accent-color;
+  }
+}
+.close-icon {
+  width: 11px;
+  height: 11px;
+}
