--- a/css/main.css
+++ b/css/main.css
@@ -369,6 +369,12 @@ body.modal-open {
   color: #ffffff;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer .logo {
+    text-align: left;
+  }
+}
+
 .header {
   position: relative;
   display: -webkit-box;
@@ -690,6 +696,12 @@ header {
   text-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+  }
+}
+
 .overlay {
   width: 100%;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../image2/mob/m-hero1x.jpg);
@@ -742,6 +754,14 @@ header {
   line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero-button {
@@ -971,6 +991,13 @@ header {
   text-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .teams-title {
+    font-size: 36px;
+    margin: 0 0 50px;
+  }
+}
+
 .employee-card {
   margin: 0 0 30px;
   background-color: #ffffff;
@@ -1093,12 +1120,19 @@ header {
 }
 
 .customer-title {
-  margin: 0 0 50px;
+  margin: 0 0 30px;
   color: #212121;
   font-weight: bold;
-  font-size: 33px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .customer-title {
+    font-size: 36px;
+    margin: 0 0 50px;
+  }
 }
 
 .customer-list {
@@ -1208,12 +1242,24 @@ header {
   font-style: normal;
 }
 
+@media screen and (min-width: 1200px) {
+  .footer__info-addres {
+    text-align: left;
+  }
+}
+
 .footer__info-contacts {
   display: block;
   margin: 0 0 8px;
   text-align: center;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__info-contacts {
+    text-align: left;
+  }
 }
 
 .footer__info-contacts:last-child {
