--- a/sass/components/main-index/_customer.scss
+++ b/sass/components/main-index/_customer.scss
@@ -5,10 +5,14 @@
   }
 }
 .customer-title {
-  margin: 0 0 50px;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    margin: 0 0 50px;
+  }
+  margin: 0 0 30px;
   color: $title-text-color;
   font-weight: bold;
-  font-size: 33px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
 }
